# simple-int-parser

./: .gitignore  CMakeLists.txt  config.h.in  config.hpp  main.cpp  task.txt
data_for_testing/: test.txt
io_means/: CMakeLists.txt  io_means.cpp  io_means.hpp
parser/: CMakeLists.txt  parser.cpp  parser.hpp
testing/: CMakeLists.txt  testing.hpp
